집에서 커밋 테스트

--- a/01_starter/index.html
+++ b/01_starter/index.html
@@ -2,7 +2,7 @@
 <!-- ! + Enter 또는 Tab 키 입력으로 HTML 기본 구조 자동 완성 -->
 <!-- 메뉴 한글화 - Extensions에서 korean 검색 -->
 <!-- 
-  lang 지정 사용자 정의 속성 추가 => 명령 팔레트에서 settings 검색 ctrl + shift + p
+  lang 지정 사용자 정의 속성 추가 => 명령 팔레트에서 settings JSON 검색 ctrl + shift + p
 
   "emmet.variables": {
       "lang": "ko"
