--- a/04_HTML/5_multimedia.html
+++ b/04_HTML/5_multimedia.html
@@ -74,14 +74,20 @@
   <iframe width="560" height="315" src="https://www.youtube.com/embed/5TRV2pcVcng?autoplay=1&mute=1" frameborder="0"></iframe>
 
   <!-- 유튜브 재생목록
-    playlist: 쉼표로 구분된 재생할 비디오의 목록(원본 URL 외에)
+    playlist: 재생할 비디오의 목록(쉼표로 구분)
   -->
   <!-- 유튜브 반복재생
     0: 한 번만 재생(기본값)
     1: 무한 재생
   -->
   <!-- playlist 필수 작성 -->
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/5TRV2pcVcng?playlist=5TRV2pcVcng&loop=1" frameborder="0"></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/5TRV2pcVcng?playlist=5TRV2pcVcng,U88WEbpDr6I&loop=1" frameborder="0"></iframe>
+  
+  <!-- 유튜브 컨트롤
+    0: 플레이어 컨트롤 표시 안함
+    1: 플레이어 컨트롤 표시(기본값)
+  -->
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/5TRV2pcVcng?controls=0" frameborder="0"></iframe>
   
 </body>
 </html>
