--- a/04_HTML/9_attribute.html
+++ b/04_HTML/9_attribute.html
@@ -51,5 +51,25 @@
   <!-- class 보다는 사용 빈도가 낮음(특히 React에서는 사용 안함) -->
   <span id="abc">동해물</span>과 <span class="red">백두산</span>이 마르고 닳도록
   하느님이 보우하사 <span class="red">우리나라</span> 만세
+
+  <br><br>
+
+  <!-- data-: 요소에 데이터를 저장하는 용도(사용자 정의 속성을 만듦) -->
+  <!-- JS에서 이 속성에 저장한 데이터를 꺼내서 이용 가능 -->
+  <!-- 사용법: data-내가 원하는 이름 작명="데이터" -->
+  <div data-fruit-name="apple">사과</div>
+  <div data-fruit-name="banana">바나나</div>
+
+  <script>
+    // div 태그를 모두 찾아서 elements 라는 이름의 저장 공간에 담아라
+    const elements = document.querySelectorAll('div');
+    console.log(elements);
+    // 찾은 요소들을 하나씩 반복해가면서 element에 다시 담고
+    elements.forEach(element => {
+      // console.log(element.dataset.fruit-name); //안됨
+      // element 안에 dataset 안에 작명한 이름으로 접근
+      console.log(element.dataset.fruitName); // JS 표기법
+    });
+  </script>
 </body>
 </html>
