--- a/05_CSS/6_selector_pseudo_element.html
+++ b/05_CSS/6_selector_pseudo_element.html
@@ -15,6 +15,8 @@
       width: 100px;
       height: 100px;
       background-color: orange;
+
+      overflow: auto;
     }
 
     /* ::before (요소의 내부 앞에 내용 삽입) */
@@ -66,6 +68,27 @@
       text-decoration: underline;
       color: black;
     }
+
+    /* 잘 활용하면 HTML 구조 추가와 class 속성 값의 추가 없이 제어 가능 */
+
+    /* ::placeholder, ::-webkit-scrollbar */
+    /* 스크롤바 너비 */
+    .custom-scroll::-webkit-scrollbar {
+      width: 6px;
+    }
+    /* 스크롤바 트랙 */
+    .custom-scroll::-webkit-scrollbar-track {
+      background-color: #f1f1f1;
+      border-radius: 2.5px;
+    }
+    /* 스크롤바 핸들 */
+    .custom-scroll::-webkit-scrollbar-thumb {
+      background-color: #ccc;
+      border-radius: 2.5px;
+    }
+    .custom-scroll::-webkit-scrollbar-thumb:hover {
+      background-color: #aaa;
+    }
   </style>
 </head>
 <body>
@@ -83,5 +106,19 @@
     <li><a href="#">이용약관</a></li>
     <li><a href="#">고객센터</a></li>
   </ul>
+
+  <hr>
+  
+  <!-- Tip! 커스텀 스크롤바 만들기 -->
+  <div class="box custom-scroll">
+    Content!
+    Content!
+    Content!
+    Content!
+    Content!
+    Content!
+    Content!
+    Content!
+  </div>
 </body>
 </html>
