--- a/05_CSS/quiz/seletor/selector_quiz1.html
+++ b/05_CSS/quiz/seletor/selector_quiz1.html
@@ -54,7 +54,7 @@
       color: red;
     } */
 
-    /* section > div {
+    /* section div {
       color: red;
     } */
 
@@ -62,7 +62,7 @@
       background-color: red;
     } */
 
-    /* [href="https://www.naver.com"] > span {
+    /* [href="https://www.naver.com"] span {
       color: red;
     } */
   </style>
