--- a/05_CSS/quiz/seletor/selector_quiz1.html
+++ b/05_CSS/quiz/seletor/selector_quiz1.html
@@ -4,18 +4,18 @@
   2) 태그 선택자는 HTML 태그명으로 요소를 선택합니다.
   3) 아이디 선택자는 HTML id 속성의 값으로 요소를 선택합니다.
   4) 클래스 선택자는 HTML class 속성의 값으로 요소를 선택합니다.
-  -5) 속성 선택자는 CSS 속성으로 요소를 선택합니다.
+  -5) 속성 선택자는 CSS 속성으로 요소를 선택합니다. HTML 속성
 
   2. 다음 중 선택자와 구분 기호가 잘못 연결된 것을 고르세요.
   1) 그룹 선택자 - ,
   2) 자식 선택자 - >
-  -3) 하위 선택자 - /
+  -3) 하위 선택자 - / 띄어쓰기
   4) 인접 형제 선택자 - +
   5) 일반 형제 선택자 - ~
 
   3. 다음 중 가상 클래스 선택자가 아닌 것을 고르세요.
   1) :hover
-  -2) :before
+  -2) :before   가상 요소 ::before
   3) :nth-child(n)
   4) :focus
   5) :last-child
@@ -62,7 +62,7 @@
       background-color: red;
     } */
 
-    /* [href="https://www.naver.com"] span {
+    /* a[href="https://www.naver.com"] span {
       color: red;
     } */
   </style>
