--- a/05_CSS/18_position_fixed.html
+++ b/05_CSS/18_position_fixed.html
@@ -43,7 +43,7 @@
       background-color: red;
     }
 
-    /* 보통 고정된 헤더, 광고 배너나 최근 본 상품, 최상단으로 이동하는 버튼을 만들 때 주로 사용 */
+    /* 보통 고정된 헤더, 광고 배너나 최근 본 상품, 최상단으로 이동하는 버튼을 만들 때 주로 사용! */
   </style>
 </head>
 <body>
