--- a/05_CSS/23_transition.html
+++ b/05_CSS/23_transition.html
@@ -32,11 +32,55 @@
       width: 300px;
       background-color: royalblue;
     }
+
+    div + div {
+      margin-top: 20px;
+    }
+
+    .transition-1 {
+      transition: 
+        width 2s,
+        height 4s linear 3s;
+    }
+    .transition-1:hover {
+      width: 300px;
+      height: 300px;
+    }
+
+    .transition-2 {
+      transition: width 3s ease-in;
+      transition: width 3s cubic-bezier(.84,.05,.16,.9);
+    }
+    .transition-2:hover {
+      width: 300px;
+    }
+
+    .transition-3 {
+      position: relative;
+      left: 0;
+      transition: left 1s;
+    }
+    .transition-3:active {
+      left: 300px;
+    }
+
   </style>
 </head>
 <body>
   <h1>transition(전환 효과)</h1>
   <h2>요소의 전, 후 상태의 중간 단계를 자연스럽게 만들어주는 효과</h2>
   <div class="test"></div>
+
+  <div class="transition-1"></div>
+  <div class="transition-2"></div>
+  <div class="transition-3"></div>
 </body>
 </html>
+
+<!-- (정리) Quiz
+  Q1: transition-property 속성의 기본값은?
+  A1: all (기본적으로 모든 속성에 적용)
+
+  Q2: transition 단축 속성의 필수 포함 속성은?
+  A2: transition-duration (지속 시간)
+-->
