new icon, profile image

--- a/06_portfolio-site/index.html
+++ b/06_portfolio-site/index.html
@@ -40,7 +40,7 @@
     <div class="inner">
       <!-- 로고 -->
       <a href="index.html" class="logo">
-        <img src="images/logo.png" alt="로고">
+        <img src="images/logo_jjy.png" alt="로고">
       </a>
 
       <!-- 메뉴 -->
@@ -71,7 +71,7 @@
       <div class="about__wrapper">
         <div class="about__img">
           <!-- 본인 프로필 이미지로 변경 -->
-          <img src="images/profile.jpg" alt="프로필">
+          <img src="images/profile_jjy.png" alt="프로필">
         </div>
         <div class="about__text">
           <!-- 본인 슬로건, 이름(생년월), 교육 사항 등 작성 -->
