포트폴리오 - WORK

--- a/06_portfolio-site/index.html
+++ b/06_portfolio-site/index.html
@@ -166,5 +166,30 @@
       </ul>
     </div>
   </section>
+
+  <!-- WORK -->
+  <section id="work" class="work font-en">
+    <div class="inner">
+      <h2 class="title">WORK</h2>
+      <div class="port">
+        <div class="port__img">
+          <img src="images/work_1.jpg" alt="포트폴리오1">
+        </div>
+        <div class="port__text">
+          <h3>프로젝트명</h3>
+          <ul>
+            <li><span>주요 기능 : </span>주요 기능 설명</li>
+            <li><span>적용 기술 : </span>HTML, CSS, JS, React, Java, Spring Boot</li>
+            <li><span>GitHub : </span>깃허브 주소</li>
+            <li><span>URL : </span>배포 주소</li>
+          </ul>
+          <div class="btn-group">
+            <a href="javascript:void(0)" target="_blank" class="btn">README</a>
+            <a href="javascript:void(0)" class="btn btn--brown">모달</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
