포트폴리오 - 모달창 띄우기

--- a/06_portfolio-site/index.html
+++ b/06_portfolio-site/index.html
@@ -185,11 +185,43 @@
           </ul>
           <div class="btn-group">
             <a href="javascript:void(0)" target="_blank" class="btn">README</a>
-            <a href="javascript:void(0)" class="btn btn--brown">모달</a>
+            <a href="javascript:void(0)" class="btn btn--brown btn-modal">모달</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="port">
+        <div class="port__img">
+          <img src="images/work_2.jpg" alt="포트폴리오2">
+        </div>
+        <div class="port__text">
+          <h3>프로젝트명</h3>
+          <ul>
+            <li><span>주요 기능 : </span>주요 기능 설명</li>
+            <li><span>적용 기술 : </span>HTML, CSS, JS, React, Java, Spring Boot</li>
+            <li><span>GitHub : </span>깃허브 주소</li>
+            <li><span>URL : </span>배포 주소</li>
+          </ul>
+          <div class="btn-group">
+            <a href="javascript:void(0)" target="_blank" class="btn">README</a>
+            <a href="javascript:void(0)" class="btn btn--brown btn-modal">모달</a>
           </div>
         </div>
       </div>
     </div>
   </section>
+
+
+  <!-- MODAL -->
+  <div id="modal">
+    <div class="modal__inner">
+      <img src="images/work_4.jpg" alt="샘플">
+      <span class="material-symbols-outlined btn-close">close</span>
+    </div>
+  </div>
+
+
+  <!-- CONTACT -->
+  <section id="contact" class="contact"></section>
 </body>
 </html>
