포트폴리오 예제 완성

--- a/06_portfolio-site/index.html
+++ b/06_portfolio-site/index.html
@@ -76,7 +76,7 @@
       <div class="about__wrapper">
         <div class="about__img">
           <!-- 본인 프로필 이미지로 변경 -->
-          <img src="images/profile.jpg" alt="프로필">
+          <img src="images/logo_jjy.png" alt="프로필">
         </div>
         <div class="about__text">
           <!-- 본인 슬로건, 이름(생년월), 교육 사항 등 작성 -->
@@ -211,6 +211,43 @@
     </div>
   </section>
 
+  <!-- CONTACT -->
+  <section id="contact" class="contact font-en scroll-spy">
+    <div class="inner">
+      <h2 class="title">CONTACT</h2>
+      <div class="contact__info">
+        <ul>
+          <li><a href="https://github.com/jjystar3">github.com/jjystar3</a></li>
+          <li>010-1234-5678</li>
+          <li>jjystar3@gmail.com</li>
+        </ul>
+      </div>
+      <div class="contact__sns">
+        <ul>
+          <li>
+            <a href="인스타그램 주소" target="_blank">
+              <img src="images/icon/icon_insta.png" alt="인스타그램">
+            </a>
+          </li>
+          <li>
+            <a href="유튜브 주소" target="_blank">
+              <img src="images/icon/icon_youtube.png" alt="유튜브">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+   <footer>
+    <div class="inner">
+      <p class="copyright">
+        &copy; <span class="this-year"></span>
+        정주용. <span class="font-en">All Rights Reserved.</span>
+      </p>
+    </div>
+   </footer>
 
   <!-- MODAL -->
   <div id="modal">
@@ -220,8 +257,11 @@
     </div>
   </div>
 
-
-  <!-- CONTACT -->
-  <section id="contact" class="contact"></section>
+  <!-- SCROLL TO TOP -->
+   <div id="to-top">
+    <a href="#">
+      <span class="material-symbols-outlined">arrow_upward</span>
+    </a>
+   </div>
 </body>
 </html>
