포트폴리오 div 정렬

--- a/06_portfolio-site copy/index.html
+++ b/06_portfolio-site copy/index.html
@@ -76,8 +76,20 @@
       <div class="about__wrapper">
         <div class="about__img">
           <!-- 본인 프로필 이미지로 변경 -->
-          <img src="images/logo_jjy.png" alt="프로필">
+          <img src="images/logo_jjy.png" alt="공간확보">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img src="images/logo_jjy.png" alt="프로필 앞">
+              </div>
+              <div class="flip-card-back">
+                <img src="images/profile.jpg" alt="프로필 뒤">
+              </div>
+            </div>
+          </div>
         </div>
+        
+
         <div class="about__text">
           <!-- 본인 슬로건, 이름(생년월), 교육 사항 등 작성 -->
           <strong class="slogan font-en">Simple is Best</strong>
