포트폴리오 이미지 추가

--- a/06_portfolio-site copy/index.html
+++ b/06_portfolio-site copy/index.html
@@ -40,6 +40,10 @@
   <!-- <span>헬로 월드!</span>
   <span class="font-en">Hello world!</span> -->
 
+  <div class="bg-img">
+    <img src="images/Damsel in distress Color.png" alt="">
+  </div>
+
   <!-- HEADER -->
   <header>
     <div class="inner">
@@ -65,7 +69,7 @@
   <!-- 배경 비디오 적용(또는 슬라이드로 만들고 싶으면 swiper 참고) -->
    <section class="visual">
     <video autoplay muted loop>
-      <source src="videos/movie2.mp4" type="video/mp4">
+      <source src="videos/movie3.mp4" type="video/mp4">
     </video>
    </section>
 
@@ -74,16 +78,16 @@
     <div class="inner">
       <h2 class="title font-en">ABOUT</h2>
       <div class="about__wrapper">
+
         <div class="about__img">
           <!-- 본인 프로필 이미지로 변경 -->
-          <img src="images/logo_jjy.png" alt="공간확보">
           <div class="flip-card">
             <div class="flip-card-inner">
               <div class="flip-card-front">
                 <img src="images/logo_jjy.png" alt="프로필 앞">
               </div>
               <div class="flip-card-back">
-                <img src="images/profile.jpg" alt="프로필 뒤">
+                <img src="images/profile_jjy.png" alt="프로필 뒤">
               </div>
             </div>
           </div>
@@ -92,7 +96,7 @@
 
         <div class="about__text">
           <!-- 본인 슬로건, 이름(생년월), 교육 사항 등 작성 -->
-          <strong class="slogan font-en">Simple is Best</strong>
+          <strong class="slogan">항상 창작하는 개발자</strong>
           <h3 class="font-en">Jeong Ju Young</h3>
           <div>
             <h4 class="font-en">EDUCATION</h4>
@@ -121,58 +125,53 @@
         <!-- 스킬 추가하려면 li 요소 복사 -->
         <li>
           <div class="font-en">
-            <p>Java</p>
+            <p>Ps</p>
           </div>
-          <h3 class="font-en">Java<br>Programing</h3>
+          <h3 class="font-en">Photoshop</h3>
           <ul>
-            <li>객체지향</li>
-            <li>람다식</li>
-            <li>파일 입출력</li>
-            <li>JDBC</li>
+            <li>일러스트</li>
+            <li>텍스쳐</li>
+            <li>사진 편집</li>
           </ul>
         </li>
         <li>
           <div class="font-en">
-            <p>Html</p>
+            <p>An</p>
           </div>
-          <h3 class="font-en">HTML5</h3>
+          <h3 class="font-en">Animate</h3>
           <ul>
-            <li>웹페이지 구조 설계</li>
-            <li>시맨틱 태그</li>
+            <li>2D 애니메이션 제작</li>
           </ul>
         </li>
         <li>
           <div class="font-en">
-            <p>Css</p>
+            <p>BLENDER</p>
           </div>
-          <h3 class="font-en">CSS3</h3>
+          <h3 class="font-en">Blender</h3>
           <ul>
-            <li>웹페이지 레이아웃 설계</li>
-            <li>웹페이지 디자인</li>
-            <li>반응형 제작</li>
+            <li>건축, 인체 3D 모델링</li>
+            <li>텍스처링, 리깅</li>
+            <li>애니메이션</li>
           </ul>
         </li>
         <li>
           <div class="font-en">
-            <p>Js</p>
+            <p>UNITY</p>
           </div>
-          <h3 class="font-en">JavaScript</h3>
+          <h3 class="font-en">Unity</h3>
           <ul>
-            <li>DOM 조작, 제어</li>
-            <li>이벤트 처리</li>
-            <li>비동기 통신</li>
+            <li>2D, 3D 게임 기획</li>
+            <li>프로토타입, 프로젝트 제작</li>
           </ul>
         </li>
         <li>
           <div class="font-en">
-            <p>React</p>
+            <p>C#</p>
           </div>
-          <h3 class="font-en">React JS</h3>
+          <h3 class="font-en">C# Programing</h3>
           <ul>
-            <li>SPA 개발</li>
-            <li>전역 상태 관리</li>
-            <li>클라이언트 라우팅</li>
-            <li>CSR 방식 앱개발</li>
+            <li>유니티 엔진 중점의 프로그래밍</li>
+            <li>게임 로직 구현</li>
           </ul>
         </li>
       </ul>
@@ -185,7 +184,7 @@
       <h2 class="title">WORK</h2>
       <div class="port">
         <div class="port__img">
-          <img src="images/work_1.jpg" alt="포트폴리오1">
+          <img src="images/flesh1.png" alt="포트폴리오1">
         </div>
         <div class="port__text">
           <h3>프로젝트명</h3>
@@ -204,7 +203,7 @@
 
       <div class="port">
         <div class="port__img">
-          <img src="images/work_2.jpg" alt="포트폴리오2">
+          <img src="images/demon.png" alt="포트폴리오2">
         </div>
         <div class="port__text">
           <h3>프로젝트명</h3>
@@ -264,7 +263,7 @@
   <!-- MODAL -->
   <div id="modal">
     <div class="modal__inner">
-      <img src="images/work_4.jpg" alt="샘플">
+      <img src="images/flesh2.png" alt="샘플">
       <span class="material-symbols-outlined btn-close">close</span>
     </div>
   </div>
