added background img blur effect

--- a/06_portfolio-site copy/index.html
+++ b/06_portfolio-site copy/index.html
@@ -73,6 +73,11 @@
     </video>
    </section>
 
+   <section class="visual-bg">
+    <!-- <img src="images/Damsel in distress Color.png" alt=""> -->
+     <div class="visual-gap"></div>
+   </section>
+
    <!-- ABOUT -->
   <section id="about" class="about">
     <div class="inner">
