--- a/06_portfolio-site copy/index.html
+++ b/06_portfolio-site copy/index.html
@@ -71,10 +71,13 @@
     <video autoplay muted loop>
       <source src="videos/movie3.mp4" type="video/mp4">
     </video>
+    <div class="visual__text">
+      <strong class="visual-name">[정주용]</strong>
+      <h3>풀스택 개발자 포트폴리오</h3>
+    </div>
    </section>
 
    <section class="visual-bg">
-    <!-- <img src="images/Damsel in distress Color.png" alt=""> -->
      <div class="visual-gap"></div>
    </section>
 
