--- a/06_portfolio-site copy/index.html
+++ b/06_portfolio-site copy/index.html
@@ -41,7 +41,7 @@
   <span class="font-en">Hello world!</span> -->
 
   <div class="bg-img">
-    <img src="images/Damsel in distress Color.png" alt="">
+    <img src="images/flesh1.png" alt="">
   </div>
 
   <!-- HEADER -->
