--- a/06_portfolio-site copy/index.html
+++ b/06_portfolio-site copy/index.html
@@ -39,10 +39,10 @@
   <!-- 폰트 테스트 -->
   <!-- <span>헬로 월드!</span>
   <span class="font-en">Hello world!</span> -->
-
+<!-- 
   <div class="bg-img">
     <img src="images/flesh1.png" alt="">
-  </div>
+  </div> -->
 
   <!-- HEADER -->
   <header>
@@ -68,17 +68,16 @@
   <!-- VISUAL -->
   <!-- 배경 비디오 적용(또는 슬라이드로 만들고 싶으면 swiper 참고) -->
    <section class="visual">
-    <video autoplay muted loop>
+    <video class="bg-img" autoplay muted loop>
       <source src="videos/movie3.mp4" type="video/mp4">
     </video>
+   </section>
+
+   <section class="visual-bg">
     <div class="visual__text">
       <strong class="visual-name">[정주용]</strong>
       <h3>풀스택 개발자 포트폴리오</h3>
     </div>
-   </section>
-
-   <section class="visual-bg">
-     <div class="visual-gap"></div>
    </section>
 
    <!-- ABOUT -->
