--- a/06_portfolio-site copy/index.html
+++ b/06_portfolio-site copy/index.html
@@ -48,7 +48,7 @@
   <!-- 배경 비디오 적용(또는 슬라이드로 만들고 싶으면 swiper 참고) -->
    <section class="visual">
     <video class="bg-img" autoplay muted loop>
-      <source src="videos/movie3.mp4" type="video/mp4">
+      <source src="videos/movie1.mp4" type="video/mp4">
     </video>
    </section>
 
@@ -73,7 +73,7 @@
                 <img src="images/logo_jjy.png" alt="프로필 앞">
               </div>
               <div class="flip-card-back">
-                <img src="images/profile_jjy.png" alt="프로필 뒤">
+                <img src="images/profile.jpg" alt="프로필 뒤">
               </div>
             </div>
           </div>
@@ -170,7 +170,7 @@
       <h2 class="title">WORK</h2>
       <div class="port">
         <div class="port__img">
-          <img src="images/flesh1.png" alt="포트폴리오1">
+          <img src="images/work_1.jpg" alt="포트폴리오1">
         </div>
         <div class="port__text">
           <h3>프로젝트명</h3>
@@ -189,7 +189,7 @@
 
       <div class="port">
         <div class="port__img">
-          <img src="images/demon.png" alt="포트폴리오2">
+          <img src="images/work_2.jpg" alt="포트폴리오2">
         </div>
         <div class="port__text">
           <h3>프로젝트명</h3>
