--- a/06_portfolio-site copy/index.html
+++ b/06_portfolio-site copy/index.html
@@ -17,6 +17,7 @@
 
   <link rel="stylesheet" href="css/main.css">
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   <script defer src="js/main.js"></script>
@@ -27,7 +28,8 @@
   <header>
     <div class="inner">
       <!-- 로고 -->
-      <a href="index.html" class="logo">
+      <!-- <a href="index.html" class="logo"> -->
+      <a href="#main" class="logo">
         <img src="images/logo_jjy.png" alt="로고">
       </a>
 
@@ -47,14 +49,19 @@
   <!-- VISUAL -->
   <!-- 배경 비디오 적용(또는 슬라이드로 만들고 싶으면 swiper 참고) -->
    <section class="visual">
-    <video class="bg-img" autoplay muted loop>
-      <source src="videos/movie1.mp4" type="video/mp4">
-    </video>
+    <div class="bg-img">
+      <div class="bg-day">
+        <img src="images/city_day.png" alt="낮">
+      </div>
+      <div class="bg-night">
+        <img src="images/city_night.png" alt="밤">
+      </div>
+    </div>
    </section>
 
-   <section class="visual-bg">
-    <div class="visual__text">
-      <strong class="visual-name">[정주용]</strong>
+   <section id="main" class="main">
+    <div class="main__text inner">
+      <strong class="main-name">[ 정주용 ]</strong>
       <h3>풀스택 개발자 포트폴리오</h3>
     </div>
    </section>
@@ -82,7 +89,7 @@
 
         <div class="about__text">
           <!-- 본인 슬로건, 이름(생년월), 교육 사항 등 작성 -->
-          <strong class="slogan">항상 창작하는 개발자</strong>
+          <strong class="slogan">"항상 창작하는 개발자"</strong>
           <h3 class="font-en">Jeong Ju Young</h3>
           <div>
             <h4 class="font-en">EDUCATION</h4>
@@ -249,7 +256,7 @@
   <!-- MODAL -->
   <div id="modal">
     <div class="modal__inner">
-      <img src="images/flesh2.png" alt="샘플">
+      <img src="images/work_4.jpg" alt="샘플">
       <span class="material-symbols-outlined btn-close">close</span>
     </div>
   </div>
