--- a/06_portfolio-site copy/index.html
+++ b/06_portfolio-site copy/index.html
@@ -95,7 +95,7 @@
             <h4 class="font-en">EDUCATION</h4>
             <ul>
               <li>10.03 ~ 12.02 00학교 00과 졸업</li>
-              <li>23.12 ~ 24.05 풀스택 개발자 과정 수료</li>
+              <li>24.06 ~ 24.12 풀스택 개발자 과정 수료</li>
             </ul>
           </div>
         </div>
@@ -111,61 +111,71 @@
   </section>
 
   <!-- SKILL -->
-  <section id="skill" class="skill scroll-spy">
+  <section id="skill" class="skill skill-spy">
     <div class="inner">
       <h2 class="title font-en">SKILL</h2>
       <ul class="skill__list">
         <!-- 스킬 추가하려면 li 요소 복사 -->
         <li>
-          <div class="font-en">
-            <p>Ps</p>
+          <div>
+            <div>
+              <img src="images/icon/skill/Photoshop.svg" alt="포토샵">
+            </div>
+            <h3 class="font-en">Photoshop</h3>
+            <ul>
+              <li>일러스트</li>
+              <li>텍스쳐</li>
+              <li>사진 편집</li>
+            </ul>
           </div>
-          <h3 class="font-en">Photoshop</h3>
-          <ul>
-            <li>일러스트</li>
-            <li>텍스쳐</li>
-            <li>사진 편집</li>
-          </ul>
         </li>
         <li>
-          <div class="font-en">
-            <p>An</p>
+          <div>
+            <div>
+              <img src="images/icon/skill/Animate.svg" alt="애니메이트">
+            </div>
+            <h3 class="font-en">Animate</h3>
+            <ul>
+              <li>2D 애니메이션 제작</li>
+            </ul>
           </div>
-          <h3 class="font-en">Animate</h3>
-          <ul>
-            <li>2D 애니메이션 제작</li>
-          </ul>
         </li>
         <li>
-          <div class="font-en">
-            <p>BLENDER</p>
+          <div>
+            <div>
+              <img src="images/icon/skill/blender.svg" alt="블렌더">
+            </div>
+            <h3 class="font-en">Blender</h3>
+            <ul>
+              <li>건축, 인체 3D 모델링</li>
+              <li>텍스처링, 리깅</li>
+              <li>애니메이션</li>
+            </ul>
           </div>
-          <h3 class="font-en">Blender</h3>
-          <ul>
-            <li>건축, 인체 3D 모델링</li>
-            <li>텍스처링, 리깅</li>
-            <li>애니메이션</li>
-          </ul>
         </li>
         <li>
-          <div class="font-en">
-            <p>UNITY</p>
+          <div>
+            <div>
+              <img src="images/icon/skill/Unity.svg" alt="유니티">
+            </div>
+            <h3 class="font-en">Unity</h3>
+            <ul>
+              <li>2D, 3D 게임 기획</li>
+              <li>프로토타입, 프로젝트 제작</li>
+            </ul>
           </div>
-          <h3 class="font-en">Unity</h3>
-          <ul>
-            <li>2D, 3D 게임 기획</li>
-            <li>프로토타입, 프로젝트 제작</li>
-          </ul>
         </li>
         <li>
-          <div class="font-en">
-            <p>C#</p>
+          <div>
+            <div>
+              <img src="images/icon/skill/C_sharp.svg" alt="C#">
+            </div>
+            <h3 class="font-en">C# Programing</h3>
+            <ul>
+              <li>유니티 중점 프로그래밍</li>
+              <li>게임 로직 구현</li>
+            </ul>
           </div>
-          <h3 class="font-en">C# Programing</h3>
-          <ul>
-            <li>유니티 엔진 중점의 프로그래밍</li>
-            <li>게임 로직 구현</li>
-          </ul>
         </li>
       </ul>
     </div>
