--- a/06_portfolio-site copy/index.html
+++ b/06_portfolio-site copy/index.html
@@ -59,10 +59,13 @@
     </div>
    </section>
 
+   <!-- MAIN -->
    <section id="main" class="main">
-    <div class="main__text inner">
-      <strong class="main-name">[ 정주용 ]</strong>
-      <h3>풀스택 개발자 포트폴리오</h3>
+    <div class="inner">
+      <div class="main__text">
+        <strong class="main-name">[ 정주용 ]</strong>
+        <h3>풀스택 개발자 포트폴리오</h3>
+      </div>
     </div>
    </section>
 
@@ -111,7 +114,7 @@
   </section>
 
   <!-- SKILL -->
-  <section id="skill" class="skill skill-spy">
+  <section id="skill" class="skill scroll-spy">
     <div class="inner">
       <h2 class="title font-en">SKILL</h2>
       <ul class="skill__list">
