모달창 1개 더 추가

--- a/06_portfolio-site copy/index.html
+++ b/06_portfolio-site copy/index.html
@@ -267,8 +267,14 @@
    </footer>
 
   <!-- MODAL -->
-  <div id="modal">
-    <div class="modal__inner">
+  <div id="modal1">
+    <div class="modal1__inner">
+      <img src="images/work_3.jpg" alt="샘플">
+      <span class="material-symbols-outlined btn-close">close</span>
+    </div>
+  </div>
+  <div id="modal2">
+    <div class="modal2__inner">
       <img src="images/work_4.jpg" alt="샘플">
       <span class="material-symbols-outlined btn-close">close</span>
     </div>
