set max/min height

--- a/06_portfolio-site copy/index.html
+++ b/06_portfolio-site copy/index.html
@@ -60,7 +60,7 @@
    </section>
 
    <!-- MAIN -->
-   <section id="main" class="main">
+   <section id="main" class="main scroll-spy">
     <div class="inner">
       <div class="main__text">
         <strong class="main-name">[ 정주용 ]</strong>
@@ -70,7 +70,7 @@
    </section>
 
    <!-- ABOUT -->
-  <section id="about" class="about">
+  <section id="about" class="about scroll-spy">
     <div class="inner">
       <h2 class="title font-en">ABOUT</h2>
       <div class="about__wrapper">
@@ -185,7 +185,7 @@
   </section>
 
   <!-- WORK -->
-  <section id="work" class="work font-en">
+  <section id="work" class="work font-en scroll-spy">
     <div class="inner">
       <h2 class="title">WORK</h2>
       <div class="port">
