work section 이미지를 영상으로 교체

--- a/06_portfolio-site copy/index.html
+++ b/06_portfolio-site copy/index.html
@@ -182,14 +182,16 @@
     <div class="inner">
       <h2 class="title">WORK</h2>
       <div class="port">
-        <div class="port__img" style="transition-delay: 0.1s;">
-          <img src="images/work_1.jpg" alt="포트폴리오1">
+        <div class="port__video" style="transition-delay: 0.1s;">
+          <video autoplay muted loop>
+            <source src="videos/work1.mp4" type="video/mp4">
+          </video>
         </div>
         <div class="port__text" style="transition-delay: 0.1s;">
-          <h3>프로젝트 1</h3>
+          <h3>유니티 프로토타입 1</h3>
           <ul>
-            <li><span>주요 기능 : </span>주요 기능 설명</li>
-            <li><span>적용 기술 : </span>HTML, CSS, JS, React, Java, Spring Boot</li>
+            <li><span>주요 기능 : </span>플레이어를 제외한 모든 사물의 시간을 늦추는 능력 구현</li>
+            <li><span>적용 기술 : </span>C#, Unity</li>
             <li><span>GitHub : </span>깃허브 주소</li>
             <li><span>URL : </span>배포 주소</li>
           </ul>
@@ -201,14 +203,16 @@
       </div>
 
       <div class="port">
-        <div class="port__img" style="transition-delay: 0.4s;">
-          <img src="images/work_2.jpg" alt="포트폴리오2">
+        <div class="port__video" style="transition-delay: 0.4s;">
+          <video autoplay muted loop>
+            <source src="videos/work2.mp4" type="video/mp4">
+          </video>
         </div>
         <div class="port__text" style="transition-delay: 0.4s;">
-          <h3>프로젝트 2</h3>
+          <h3>유니티 프로토타입 2</h3>
           <ul>
-            <li><span>주요 기능 : </span>주요 기능 설명</li>
-            <li><span>적용 기술 : </span>HTML, CSS, JS, React, Java, Spring Boot</li>
+            <li><span>주요 기능 : </span>젤다의 전설 게임의 한 레벨을 똑같이 제현해보는 프로젝트</li>
+            <li><span>적용 기술 : </span>C#, Unity, Photoshop, Blender</li>
             <li><span>GitHub : </span>깃허브 주소</li>
             <li><span>URL : </span>배포 주소</li>
           </ul>
@@ -235,12 +239,12 @@
       <div class="contact__sns">
         <ul>
           <li>
-            <a href="인스타그램 주소" target="_blank">
+            <a href="인스타그램" target="_blank">
               <img src="images/icon/icon_insta.png" alt="인스타그램">
             </a>
           </li>
           <li>
-            <a href="유튜브 주소" target="_blank">
+            <a href="유튜브" target="_blank">
               <img src="images/icon/icon_youtube.png" alt="유튜브">
             </a>
           </li>
@@ -262,13 +266,17 @@
   <!-- MODAL -->
   <div id="modal1">
     <div class="modal1__inner">
-      <img src="images/work_3.jpg" alt="샘플">
+      <video autoplay muted loop>
+        <source src="videos/work1.mp4" type="video/mp4">
+      </video>
       <span class="material-symbols-outlined btn-close">close</span>
     </div>
   </div>
   <div id="modal2">
     <div class="modal2__inner">
-      <img src="images/work_4.jpg" alt="샘플">
+      <video autoplay muted loop>
+        <source src="videos/work2.mp4" type="video/mp4">
+      </video>
       <span class="material-symbols-outlined btn-close">close</span>
     </div>
   </div>
