폴더 이름 바꾸기

--- a/portfolio-site_JuYoung/index.html
+++ b/portfolio-site_JuYoung/index.html
@@ -266,7 +266,7 @@
   <!-- MODAL -->
   <div id="modal1">
     <div class="modal1__inner">
-      <video autoplay muted loop>
+      <video autoplay muted controls>
         <source src="videos/work1.mp4" type="video/mp4">
       </video>
       <span class="material-symbols-outlined btn-close">close</span>
@@ -274,7 +274,7 @@
   </div>
   <div id="modal2">
     <div class="modal2__inner">
-      <video autoplay muted loop>
+      <video autoplay muted controls>
         <source src="videos/work2.mp4" type="video/mp4">
       </video>
       <span class="material-symbols-outlined btn-close">close</span>
