호환성 검사

--- a/portfolio-site_JuYoung/index.html
+++ b/portfolio-site_JuYoung/index.html
@@ -9,7 +9,7 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css">
 
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,7 +45,7 @@
   </header>
 
   <!-- VISUAL -->
-   <section class="visual">
+   <div class="visual">
     <div class="bg-img">
       <div class="bg-day">
         <img src="images/city_day.png" alt="낮">
@@ -54,7 +54,7 @@
         <img src="images/city_night.png" alt="밤">
       </div>
     </div>
-   </section>
+   </div>
 
    <!-- MAIN -->
    <section id="main" class="main scroll-spy">
