파일 삭제/추가

--- a/portfolio-site_JuYoung/index.html
+++ b/portfolio-site_JuYoung/index.html
@@ -79,7 +79,7 @@
                 <img src="images/logo_jjy.png" alt="프로필 앞">
               </div>
               <div class="flip-card-back">
-                <img src="images/profile.jpg" alt="프로필 뒤">
+                <img src="images/profile_jjy.png" alt="프로필 뒤">
               </div>
             </div>
           </div>
